tests/errors/multi_error_10.c
float pi = 3.14;
int r = 5;
float area;

area = pi * r * r;

if (area > 50.0)
{
    int x = 1;
}
else
{
    int x = 2;
}

int x = 3; // Redeclaration
z = 10; // Undeclared
